cameraActivity 첫 성공 그러나 박스 크기, 회전 변경 필요

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,7 +61,8 @@
         <activity
             android:name=".CameraActivity"
             android:configChanges="keyboardHidden|orientation"
-            android:exported="true">
+            android:exported="true"
+            android:screenOrientation="landscape">
 
         </activity>
     </application>
