portrait 모드에서 풀 스크린 받기

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,7 +62,7 @@
             android:name=".CameraActivity"
             android:configChanges="keyboardHidden|orientation"
             android:exported="true"
-            android:screenOrientation="landscape">
+            android:screenOrientation="portrait">
 
         </activity>
     </application>
